--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "babel-preset-es2015": "^6.14.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
-    "eslint": "^3.5.0",
-    "gettext-parser": "^1.2.0"
+    "eslint": "^3.5.0"
   },
   "dependencies": {
-    "node-gettext": "^1.1.0"
+    "gettext-parser": "^1.2.0"
   }
 }
