--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "browserify src/entry.js -o dist/bundle.js -t [ babelify --presets [ es2015 ] ]",
+    "build": "babel src -d dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean-install": "rm -rf ./node_modules && npm cache clean && npm cache ls && rm -rf ~/.npm && npm install"
   },
@@ -13,8 +13,6 @@
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.0",
     "eslint": "^3.5.0"
   },
   "dependencies": {
