--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src -d dist",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ava --verbose",
+    "test:watch": "ava --watch --verbose",
     "clean-install": "rm -rf ./node_modules && npm cache clean && npm cache ls && rm -rf ~/.npm && npm install"
   },
   "author": "qrg",
   "license": "MIT",
   "devDependencies": {
+    "ava": "^0.16.0",
     "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "eslint": "^3.5.0"
@@ -22,5 +24,14 @@
     "presets": [
       "es2015"
     ]
+  },
+  "ava": {
+    "files": [
+      "test/**/*.test.js"
+    ],
+    "failFast": true,
+    "timeout": "4s",
+    "require": ["babel-register"],
+    "babel": "inherit"
   }
 }
