--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ava": "^0.16.0",
     "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-0": "^6.5.0",
     "eslint": "^3.5.0"
   },
   "dependencies": {
@@ -22,7 +23,8 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "stage-0"
     ]
   },
   "ava": {
@@ -31,7 +33,9 @@
     ],
     "failFast": true,
     "timeout": "4s",
-    "require": ["babel-register"],
+    "require": [
+      "babel-register"
+    ],
     "babel": "inherit"
   }
 }
