feat - Show full item information

--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
-  "mo": "./data/0.C-5459/lang/mo/ja/LC_MESSAGES/cataclysm-dda.mo"
+  "mo": "./data/0.C-5459/lang/mo/ja/LC_MESSAGES/cataclysm-dda.mo",
+  "json_dir": "./data/0.C-5459/data/json"
 }
