feat - Inherit json item data via Inheritance rules
* https://github.com/CleverRaven/Cataclysm-DDA/wiki/Inheritance/abf88aa433a0071d4009700441ab97a14e588267
* Add config.lang

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-  "mo": "./data/0.C-5459/lang/mo/ja/LC_MESSAGES/cataclysm-dda.mo",
-  "json_dir": "./data/0.C-5459/data/json"
+  "lang": "ja",
+  "mo_dir": "/Users/qurage/workspace/git/github.com/qrg/cdda-translator/data/0.C-5583/lang/mo",
+  "json_dir": "/Users/qurage/workspace/git/github.com/qrg/cdda-translator/data/0.C-5583/data/json"
 }
