--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ava": "^0.16.0",
     "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-es2016": "^6.11.3",
+    "babel-preset-es2017": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^3.6.0"
   },
@@ -25,6 +27,8 @@
   "babel": {
     "presets": [
       "es2015",
+      "es2016",
+      "es2017",
       "stage-0"
     ]
   },
