build - npm run lint via ESLint

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src -d dist",
-    "test": "ava --verbose",
+    "test": "ava --verbose && npm run lint",
     "test:watch": "ava --watch --verbose",
+    "lint": "eslint -c .eslintrc.yml \"src/**/*.js\" \"test/**/*.js\"",
     "clean-install": "rm -rf ./node_modules && npm cache clean && npm cache ls && rm -rf ~/.npm && npm install"
   },
   "author": "qrg",
