chore - Rename project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cdda-item-searcher",
+  "name": "cdda-searcher-app",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
