--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,11 +4,15 @@ env:
   browser: true
 extends:
   - eslint:recommended
+  - plugin:react/recommended
 parserOptions:
   ecmaVersion: 2017
   ecmaFeatures:
     experimentalObjectRestSpread: true
+    jsx: true
   sourceType: module
+plugins:
+  - react
 rules:
   indent:
     - error
