--- a/package.json
+++ b/package.json
@@ -18,25 +18,42 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "asar": "^0.12.3",
     "ava": "^0.16.0",
     "babel-cli": "^6.14.0",
+    "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-es2016": "^6.11.3",
     "babel-preset-es2017": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "eslint": "^3.6.1"
+    "copy-webpack-plugin": "^3.0.1",
+    "cross-env": "^3.0.0",
+    "electron": "^1.4.1",
+    "electron-packager": "^8.1.0",
+    "electron-rebuild": "^1.2.1",
+    "eslint": "^3.6.1",
+    "eslint-plugin-react": "^6.3.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.1",
+    "webpack-target-electron-renderer": "^0.4.0"
   },
   "dependencies": {
+    "fs-extra": "^0.30.0",
     "gettext-parser": "^1.2.0",
-    "glob": "^7.1.0"
+    "glob": "^7.1.0",
+    "os-locale": "^1.4.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   },
   "babel": {
     "presets": [
       "es2015",
       "es2016",
       "es2017",
-      "stage-0"
+      "stage-0",
+      "react"
     ],
     "plugins": [
       [
