build - Use Webpack

--- a/package.json
+++ b/package.json
@@ -2,10 +2,20 @@
   "name": "cdda-bousai-guide",
   "productName": "Bousai Guide",
   "version": "0.0.1",
-  "main": "index.js",
   "description": "Cataclysm DDA Item viewer app",
+  "main": "dist/main/bundle.js",
   "scripts": {
-    "build": "babel src -d dist",
+    "start": "npm run clean && npm run bundle && npm run start:electron",
+    "start:dev": "npm run clean && npm run bundle:resources && npm run start:dev-server | npm run start:electron:dev",
+    "start:electron": "cross-env NODE_ENV=production electron dist/main/bundle.js",
+    "start:electron:dev": "cross-env HOT=1 NODE_ENV=development electron --require babel-register ./src/main/index.js",
+    "start:dev-server": "cross-env HOT=1 NODE_ENV=development webpack-dev-server --config ./task/webpack/renderer.development.babel.js --colors --progress",
+    "bundle": "npm run bundle:resources && npm run bundle:main && npm run bundle:renderer",
+    "bundle:main": "cross-env NODE_ENV=production webpack --optimize-minimize --config ./task/webpack/main.production.babel.js",
+    "bundle:renderer": "cross-env NODE_ENV=production webpack --optimize-minimize --config ./task/webpack/renderer.production.babel.js --colors --progress",
+    "bundle:resources": "babel-node ./task/copy.js",
+    "clean": "babel-node ./task/clean.js",
+    "package": "npm run clean && npm run bundle && babel-node ./task/package.js",
     "test": "ava --verbose && npm run lint",
     "test:watch": "ava --watch --verbose",
     "lint": "eslint --config .eslintrc.yml \"src/**/*.js\" \"test/**/*.js\" --fix",
@@ -28,7 +38,6 @@
     "babel-preset-es2017": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "copy-webpack-plugin": "^3.0.1",
     "cross-env": "^3.0.0",
     "electron": "^1.4.1",
     "electron-packager": "^8.1.0",
