build - Build css

--- a/package.json
+++ b/package.json
@@ -39,11 +39,16 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "cross-env": "^3.0.0",
+    "css-loader": "^0.25.0",
     "electron": "^1.4.1",
     "electron-packager": "^8.1.0",
     "electron-rebuild": "^1.2.1",
     "eslint": "^3.6.1",
     "eslint-plugin-react": "^6.3.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^3.10.1",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1",
     "webpack-target-electron-renderer": "^0.4.0"
