--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "babel-preset-stage-0": "^6.5.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
+    "devtron": "^1.3.0",
     "electron": "^1.4.1",
+    "electron-devtools-installer": "^2.0.1",
     "electron-packager": "^8.1.0",
     "electron-rebuild": "^1.2.1",
     "eslint": "^3.6.1",
