refactor - clean before bundle

--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "description": "Cataclysm DDA Item viewer app",
   "main": "dist/main/bundle.js",
   "scripts": {
-    "start": "npm run clean && npm run bundle && npm run start:electron",
+    "start": "npm run bundle && npm run start:electron",
     "start:dev": "npm run clean && npm run bundle:resources && npm run start:dev-server | npm run start:electron:dev",
     "start:electron": "cross-env NODE_ENV=production electron dist/main/bundle.js",
     "start:electron:dev": "cross-env HOT=1 NODE_ENV=development electron --require babel-register ./src/main/index.js",
     "start:dev-server": "cross-env HOT=1 NODE_ENV=development webpack-dev-server --config ./task/webpack/renderer.development.babel.js --colors --progress",
-    "bundle": "npm run bundle:resources && npm run bundle:main && npm run bundle:renderer",
+    "bundle": "npm run clean && npm run bundle:resources && npm run bundle:main && npm run bundle:renderer",
     "bundle:main": "cross-env NODE_ENV=production webpack --optimize-minimize --config ./task/webpack/main.production.babel.js",
     "bundle:renderer": "cross-env NODE_ENV=production webpack --optimize-minimize --config ./task/webpack/renderer.production.babel.js --colors --progress",
     "bundle:resources": "babel-node ./task/copy.js",
     "clean": "babel-node ./task/clean.js",
-    "package": "npm run clean && npm run bundle && babel-node ./task/package.js",
+    "package": "npm run bundle && babel-node ./task/package.js",
     "test": "ava --verbose && npm run lint",
     "test:watch": "ava --watch --verbose",
     "lint": "eslint --config .eslintrc.yml \"src/**/*.js\" \"test/**/*.js\" --fix",
