--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "webpack-target-electron-renderer": "^0.4.0"
   },
   "dependencies": {
+    "debounce": "^1.0.0",
     "fs-extra": "^0.30.0",
     "gettext-parser": "^1.2.0",
     "glob": "^7.1.0",
