build - Use npm-run-all
* https://github.com/mysticatea/npm-run-all

--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "description": "Cataclysm DDA Item viewer app",
   "main": "dist/main/bundle.js",
   "scripts": {
-    "start": "npm run bundle && npm run start:electron",
-    "start:dev": "npm run clean && npm run bundle:resources && npm run start:dev-server | npm run start:electron:dev",
+    "start": "npm-run-all bundle start:electron",
+    "start:dev": "npm-run-all clean bundle:resources --parallel start:dev-server start:electron:dev",
     "start:electron": "cross-env NODE_ENV=production electron dist/main/bundle.js",
     "start:electron:dev": "cross-env HOT=1 NODE_ENV=development electron --require babel-register ./src/main/index.js",
-    "start:dev-server": "cross-env HOT=1 NODE_ENV=development webpack-dev-server --config ./task/webpack/renderer.development.babel.js --colors --progress",
-    "bundle": "npm run clean && npm run bundle:resources && npm run bundle:main && npm run bundle:renderer",
+    "start:dev-server": "cross-env HOT=1 NODE_ENV=development webpack-dev-server --config ./task/webpack/renderer.development.babel.js --colors",
+    "bundle": "npm-run-all clean --parallel bundle:*",
     "bundle:main": "cross-env NODE_ENV=production webpack --optimize-minimize --config ./task/webpack/main.production.babel.js",
-    "bundle:renderer": "cross-env NODE_ENV=production webpack --optimize-minimize --config ./task/webpack/renderer.production.babel.js --colors --progress",
+    "bundle:renderer": "cross-env NODE_ENV=production webpack --optimize-minimize --config ./task/webpack/renderer.production.babel.js --colors",
     "bundle:resources": "babel-node ./task/copy.js",
     "clean": "babel-node ./task/clean.js",
     "package": "npm run bundle && babel-node ./task/package.js",
@@ -49,6 +49,7 @@
     "eslint-plugin-react": "^6.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "node-sass": "^3.10.1",
+    "npm-run-all": "^3.1.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
