feat - Initial config screen
* save config.json
* save items-${lang}.json
* create new config.json if it did not exist
  * ask executable path
  * ask language
* create new items-${lang}.json if it did not exist
* skip initial config screen if there was config.json

--- a/package.json
+++ b/package.json
@@ -53,23 +53,33 @@
     "eslint": "^3.7.1",
     "eslint-plugin-react": "^6.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "json-loader": "^0.5.4",
     "node-sass": "^3.10.1",
     "npm-run-all": "^3.1.0",
     "sass-loader": "^4.0.2",
+    "shebang-loader": "0.0.1",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1",
     "webpack-target-electron-renderer": "^0.4.0"
   },
   "dependencies": {
+    "JSONStream": "^1.2.1",
+    "classnames": "^2.2.5",
     "debounce": "^1.0.0",
     "fs-extra": "^0.30.0",
     "gettext-parser": "^1.2.0",
     "glob": "^7.1.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "os-locale": "^1.4.0",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-addons-css-transition-group": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-tap-event-plugin": "^1.0.0"
   },
   "babel": {
     "sourceMaps": "inline",
