--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-tap-event-plugin": "^1.0.0",
+    "uuid": "^2.0.3"
   },
   "babel": {
     "sourceMaps": "inline",
