feat - Add Tokenizer to indexing and search
* import and build `natural` partially
  * log4js required by natural causes build error on webpack
  *  https://github.com/nomiddlename/log4js-node/issues/391

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "glob": "^7.1.1",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
+    "natural": "^0.4.0",
     "os-locale": "^1.4.0",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
