--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-react": "^6.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
     "node-sass": "^3.10.1",
     "npm-run-all": "^3.1.0",
@@ -80,6 +81,7 @@
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-string-replace": "^0.3.4",
     "react-tap-event-plugin": "^1.0.0",
     "uuid": "^2.0.3"
   },
