chore - Set AVA failFast false
* same as `--fail-fast`
  * stop after first test failure
  * https://github.com/avajs/ava/blob/v0.16.0/readme.md#cli

--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "files": [
       "test/**/*.test.js"
     ],
-    "failFast": true,
+    "failFast": false,
     "timeout": "2m",
     "require": [
       "babel-register"
