--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   "dependencies": {
     "JSONStream": "^1.2.1",
+    "chalk": "^1.1.3",
     "classnames": "^2.2.5",
     "debounce": "^1.0.0",
     "fs-extra": "^1.0.0",
