--- a/package.json
+++ b/package.json
@@ -77,14 +77,16 @@
     "glob": "^7.1.1",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
+    "mousetrap": "^1.6.0",
     "natural": "^0.4.0",
     "os-locale": "^1.4.0",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-modal": "^1.5.2",
     "react-string-replace": "^0.3.4",
-    "react-tap-event-plugin": "^1.0.0",
-    "uuid": "^2.0.3"
+    "uuid": "^2.0.3",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "babel": {
     "sourceMaps": "inline",
