--- a/package.json
+++ b/package.json
@@ -85,8 +85,8 @@
     "react-modal": "^1.5.2",
     "os-locale": "^2.0.0",
     "react-string-replace": "^0.3.4",
-    "uuid": "^2.0.3",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "uuid": "^3.0.0"
   },
   "babel": {
     "sourceMaps": "inline",
