build - Lint no-return-await
* http://eslint.org/docs/rules/no-return-await

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -42,6 +42,8 @@ rules:
     - error
   prefer-const:
     - error
+  no-return-await:
+    - error
   prefer-rest-params:
     - warn
   prefer-spread:
